Fixes #5 Closes #5 Fixes #3 Closes #3 Fixes #1 Closes #1
Clean up code
Support custom events
Make options settable using HTML attributes
Differentiate methods in private and public

--- a/orig_js/example.html
+++ b/orig_js/example.html
@@ -11,7 +11,7 @@
 		<script type="text/javascript">
 			$(function() {
 				//$("#myinput").suggest({filter:'(all type:/film/director)'});
-				$("#myinput").suggest({key: "AIzaSyCGcQIahaw_mGvvx_XbFxDjyc_SEEdgAMc",
+				$("#myinput").suggest({key: "<Key generated from https://code.google.com/apis/console>'",
                                 filter:'(all domain:/film)',
                                 lang: "de,en",
                                 animate: true}
