Workaround for Dart Issue #12791 (user error) removed

--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@
           <freebase-searchwidget id="freebase-searchwidget-right" options="{{options}}" value="{{value}}" style="position:absolute; right:0px;"></freebase-searchwidget>
         </p>
     </template>
-    <freebase-searchwidget id="onlyasbugworkaround" value="{{''}}" style="display:none; visibility:hidden" options="{{''}}"></freebase-searchwidget>
+    <!--<freebase-searchwidget id="onlyasbugworkaround" value="{{''}}" style="display:none; visibility:hidden" options="{{''}}"></freebase-searchwidget>-->
     </div>
     <script type="application/dart" src="index.dart"></script>
     <!--<script type="text/javascript" src="packages/browser/dart.js"></script>-->
