--- a/test/index.html
+++ b/test/index.html
@@ -13,24 +13,32 @@
 
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <title>Freebase Search Widget example</title>
 
     <!-- Freebase Suggest -->
-    <link type='text/css' rel='stylesheet' href='https://www.gstatic.com/freebase/suggest/4_2/suggest.min.css' />
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/freebase/suggest/4_2/suggest.min.css" />
 
     <!-- import suggest component -->
     <link rel="import" href="packages/freebase_searchwidget/components/freebase_searchwidget.html">
 
-    <script src='packages/polymer/boot.js'></script>
+    <script src="packages/polymer/boot.js"></script>
 
   </head>
   <body>
-      <p>x:<freebase-searchwidget id='freebase-searchwidget-left'></freebase-searchwidget></p>
-      <p><freebase-searchwidget id='freebase-searchwidget-right' style='position:absolute; right:0px;'></freebase-searchwidget></p>
+    <div>
+      <template id="tmpl" bind>
+        <p>
+        <freebase-searchwidget id="freebase-searchwidget-left" options="{{options}}" value="{{value}}"></freebase-searchwidget>
+        </p>
+        <p>{{value}}</p>
+        <p>
+          <freebase-searchwidget id="freebase-searchwidget-right" options="{{options}}" value="{{value}}" style="position:absolute; right:0px;"></freebase-searchwidget>
+        </p>
+      </template>
 
-    <script type="text/javascript" src="packages/unittest/test_controller.js"></script>
-    <!--<script type='text/javascript' src='packages/browser/dart.js'></script> -->
-    <script type='application/dart' src='index.dart'></script>
+    </div>
+    <script type="application/dart" src="index.dart"></script>
+    <!--<script type="text/javascript" src="packages/browser/dart.js"></script>-->
   </body>
 </html>
